--- a/index.html
+++ b/index.html
@@ -4,16 +4,48 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#8C383A" />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
             crossorigin="anonymous"
         />
+        <link rel="icon" href="icons/512x512.png" type="image/png" />
+        <link
+            rel="alternate icon"
+            href="/512x512.png"
+            type="ico"
+            sizes="16x16"
+        />
+        <link rel="apple-touch-icon" href="icons/512x512.png" sizes="180x180" />
+        <link rel="manifest" href="/manifest.json" />
         <title>Shop</title>
     </head>
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
+        <script>
+            if ('serviceWorker' in navigator) {
+                // Register a service worker hosted at the root of the
+                // site using the default scope.
+                navigator.serviceWorker
+                    .register('/sw.js')
+                    .then((registration) => {
+                        console.log(
+                            'Service worker registration succeeded:',
+                            registration
+                        );
+                    })
+                    .catch((err) => {
+                        console.log(
+                            'Service worker registration failed:',
+                            error
+                        );
+                    });
+            } else {
+                console.log('Service workers are not supported.');
+            }
+        </script>
     </body>
 </html>
